--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ buildscript {
 		classpath 'gradle.plugin.edu.sc.seis:macAppBundle:2.1.9'
 		classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
 		classpath 'de.thetaphi:forbiddenapis:2.4.1'
+		classpath 'org.kordamp.gradle:jdeps-gradle-plugin:0.2.0'
 	}
 }
 
@@ -171,6 +172,7 @@ subprojects {
 	apply plugin: 'de.thetaphi.forbiddenapis'
 	apply plugin: 'checkstyle'
 	apply plugin: 'pmd'
+	apply plugin: 'org.kordamp.jdeps'
 	
 	checkstyle {
 		configFile = rootProject.file('config/checkstyle/checkstyle.xml')
