--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -9,6 +9,7 @@ if(prereleaseIdentifier) {
 
 project.ext.versions = [
 'aspectj':        '1.8.13',
+'bytebuddy':      '1.8.3',
 'groovy':         '2.4.15',
 'httpClient':     '4.5.5',
 'httpCore':       '4.4.9',
@@ -28,7 +29,7 @@ project.ext.versions = [
 project.ext.libraries = [
 'aspectjrt':                "org.aspectj:aspectjrt:${versions.aspectj}",
 'aspectjweaver':            "org.aspectj:aspectjweaver:${versions.aspectj}",
-'byte-buddy':               'net.bytebuddy:byte-buddy:1.8.1',
+'byte-buddy':               "net.bytebuddy:byte-buddy:${versions.bytebuddy}",
 'commons-io':               'commons-io:commons-io:2.6',
 'commons-lang':             'org.apache.commons:commons-lang3:3.7',
 'commons-text':             'org.apache.commons:commons-text:1.1',
