--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,8 @@ apply from: 'projectDependencies.gradle'
 import org.apache.tools.ant.filters.FixCrLfFilter
 import org.gradle.plugins.signing.Sign
 
-task wrapper(type: Wrapper) {
-	gradleVersion = '4.8'
+wrapper {
+	gradleVersion = '4.8.1'
 }
 
 def copyright = "Copyright \u00a9 2007-2017 J\u00f6rn Huxhorn"
