--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ buildscript {
 		// https://github.com/crotwell/gradle-macappbundle/issues/46
 		classpath 'gradle.plugin.edu.sc.seis:macAppBundle:2.1.9'
 		classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+		// https://github.com/johnrengelman/shadow/issues/347
+		// classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
 		classpath 'de.thetaphi:forbiddenapis:2.5'
 		classpath 'org.kordamp.gradle:jdeps-gradle-plugin:0.2.0'
 	}
