--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ import org.apache.tools.ant.filters.FixCrLfFilter
 import org.gradle.plugins.signing.Sign
 
 wrapper {
-	gradleVersion = '4.9-rc-2'
+	gradleVersion = '4.9'
 }
 
 def copyright = "Copyright \u00a9 2007-2017 J\u00f6rn Huxhorn"
