--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,7 @@ buildscript {
 		classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.2'
 		// https://github.com/crotwell/gradle-macappbundle/issues/46
 		classpath 'gradle.plugin.edu.sc.seis:macAppBundle:2.2.3'
-		classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
-		// https://github.com/johnrengelman/shadow/issues/347
-		// classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
+		classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.0'
 		classpath 'de.thetaphi:forbiddenapis:2.6'
 		classpath 'org.kordamp.gradle:jdeps-gradle-plugin:0.3.0'
 	}
@@ -492,6 +490,9 @@ project(':lilith') {
 		}
 	}
 
+	shadowDistZip.classifier = 'shadow'
+	shadowDistTar.classifier = 'shadow'
+	
 	task myDistZip(dependsOn: configurations.default.allArtifacts.buildDependencies, type: Zip) {
 		description = 'Creates a ZIP containing the Lilith distribution.'
 		classifier = 'bin'
