--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ import org.apache.tools.ant.filters.FixCrLfFilter
 import org.gradle.plugins.signing.Sign
 
 wrapper {
-	gradleVersion = '4.10.2'
+	gradleVersion = '5.0-rc-2'
 }
 
 def copyright = "Copyright \u00a9 2007-2017 J\u00f6rn Huxhorn"
@@ -208,9 +208,9 @@ subprojects {
 	}
 
 	jacocoTestReport {
-		additionalSourceDirs = files(sourceSets.main.allSource.srcDirs)
-		sourceDirectories = files(sourceSets.main.allSource.srcDirs)
-		classDirectories = files(sourceSets.main.output)
+		additionalSourceDirs.from(files(sourceSets.main.allSource.srcDirs))
+		sourceDirectories.from(files(sourceSets.main.allSource.srcDirs))
+		classDirectories.from(files(sourceSets.main.output))
 		reports {
 			html.enabled = true
 			xml.enabled = true
@@ -526,10 +526,10 @@ project(':lilith') {
 task jacocoRootReport(type: org.gradle.testing.jacoco.tasks.JacocoReport) {
 	dependsOn = subprojects.jacocoTestReport
 	dependsOn = subprojects.test
-	additionalSourceDirs = files(subprojects.sourceSets.main.allSource.srcDirs)
-	sourceDirectories = files(subprojects.sourceSets.main.allSource.srcDirs)
-	classDirectories = files(subprojects.sourceSets.main.output)
-	executionData = files(subprojects.jacocoTestReport.executionData)
+	additionalSourceDirs.from(files(subprojects.sourceSets.main.allSource.srcDirs))
+	sourceDirectories.from(files(subprojects.sourceSets.main.allSource.srcDirs))
+	classDirectories.from(files(subprojects.sourceSets.main.output))
+	executionData.from(files(subprojects.jacocoTestReport.executionData))
 	reports {
 		html.enabled = true
 		xml.enabled = true
