--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ import org.apache.tools.ant.filters.FixCrLfFilter
 import org.gradle.plugins.signing.Sign
 
 wrapper {
-	gradleVersion = '5.5.1'
+	gradleVersion = '5.6-rc-1'
 }
 
 def copyright = "Copyright \u00a9 2007-2017 J\u00f6rn Huxhorn"
@@ -187,8 +187,7 @@ subprojects {
 		ruleSetFiles = files(rootProject.file('config/pmd/ruleSet.xml'))
 		ruleSets = []
 		toolVersion = '6.17.0'
-		// https://github.com/gradle/gradle/pull/3125#issuecomment-352442432
-		//incrementalAnalysis = true
+		incrementalAnalysis = true
 		//ignoreFailures = true
 	}
 
