--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ import org.apache.tools.ant.filters.FixCrLfFilter
 import org.gradle.plugins.signing.Sign
 
 wrapper {
-	gradleVersion = '6.1-rc-3'
+	gradleVersion = '6.1'
 	// TODO:
 	// maven -> maven-publish
 	// MacAppBundle
