--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -18,6 +18,7 @@ project.ext.versions = [
 'log4j':          '1.2.17',
 'log4j2':         '2.13.3',
 'logback':        '1.2.3',
+'protobuf':       '3.12.0',
 'slf4j':          '1.7.30',
 'spock':          '1.3-groovy-2.5',
 'spring':         '5.2.6.RELEASE',
@@ -57,7 +58,7 @@ project.ext.libraries = [
 'logback-classic':          "ch.qos.logback:logback-classic:${versions.logback}",
 'logback-core':             "ch.qos.logback:logback-core:${versions.logback}",
 'objenesis':                'org.objenesis:objenesis:2.6',
-'protobuf':                 'com.google.protobuf:protobuf-java:3.11.4',
+'protobuf':                 "com.google.protobuf:protobuf-java:${versions.protobuf}",
 'servlet-api':              'javax.servlet:javax.servlet-api:3.1.0',
 'slf4j-api':                "org.slf4j:slf4j-api:${versions.slf4j}",
 'spock-core':               "org.spockframework:spock-core:${versions.spock}",
