--- a/build.gradle
+++ b/build.gradle
@@ -555,6 +555,9 @@ coveralls {
 }
 
 allprojects {
+    tasks.withType(Test).configureEach {
+        forkEvery = 100
+    }
 	tasks.each { task ->
 		if (task instanceof Javadoc) {
 			//println task
